--- a/resources/lang/zh-cn.json
+++ b/resources/lang/zh-cn.json
@@ -6,5 +6,9 @@
     "Logout" : "退出",
     "Forgot Your Password?" : "忘记密码?",
     "Remember Me": "下次自动登录",
-    "Settings": "设置"
+    "Settings": "设置",
+    "Dashboard": "仪表盘",
+    "Illusion": "幻像",
+    "Media": "媒体",
+    "Page": "页面"
 }
